--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <service android:name=".PushService"/>
+        <receiver android:name=".DustReceiver"/>
     </application>
 
 
