--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.AppCompat.NoActionBar"
         android:usesCleartextTraffic="true"
         >
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.MainActivity">
         </activity>
         <activity android:name=".PermissionActivity"
             android:noHistory="true"
